--- a/studyproject/src/App.css
+++ b/studyproject/src/App.css
@@ -1,29 +1,35 @@
 .App {
   width: 100vw;
-  height: 100lvh;
  display: flex;
+ flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  flex-direction: column;
- gap: 2
-}
-
-.testMulti {
-  background-color: #333;
-  color: #ffffff;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 10px;
+ gap: 20px;
+ padding: 20px;
 }
 
 .cards {
   display: flex;
-  gap: 2rem
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 10px
 }
 
-.yellow {
-  background-color: yellow;
-  color: #333;
+
+.lst-jobs {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  column-gap: 1.5rem;
+  row-gap: 1rem;
+
+}
+
+@media (max-width: 430px){
+  .lst-jobs{
+    display: flex;
+    flex-direction: column;
+    
+  }
 }
