--- a/studyproject/src/index.css
+++ b/studyproject/src/index.css
@@ -1,10 +1,16 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
+  width: 100vw;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(127, 255, 212, 0.243);
 }
 
 code {
